# ERCreator

./: .gitignore  README.md  pyproject.toml
ERCreator/: manage.py
ERCreator/ERCreator/: asgi.py  settings.py  urls.py  wsgi.py
ERCreator/api/: models.py  serializers.py  views.py
ERCreator/api/migrations/: 0001_initial.py
ERCreator/backend/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
ERCreator/backend/migrations/: 0001_initial.py  0002_auto_20210926_1945.py  0003_auto_20210926_1951.py  0004_auto_20210927_1046.py  0005_auto_20210927_1626.py
ERCreator/frontend/: package-lock.json  package.json
ERCreator/frontend/src/: App.js  config.js  index.js  localStorage.js
ERCreator/frontend/src/api/: auth.js  entity.js  erModels.js  instance.js  types.js
ERCreator/frontend/src/components/: Attribute.js  CreateEntityModal.js  ERModelsTable.js  Entity.js  Header.js  LoginForm.js  ModelDetailCard.js  ModelEditCard.js  ModelListCard.js
ERCreator/frontend/src/components/CreateEntityModal/: AttributeTr.js  AttributesTable.js  EntityForm.js  index.js
ERCreator/frontend/src/components/css/: Entity.module.css
ERCreator/frontend/src/pages/: DesignerPage.js  HomePage.js  LoginPage.js
