[tool.poetry]
name = "ERCreator"
version = "0.1.0"
description = ""
authors = ["FisherDV <fisherd@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
django-filter = "^2.4.0"
djangorestframework-simplejwt = "^4.8.0"
django-cors-headers = "^3.8.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
